<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:padding="16dp"
    android:background="@color/background_app"
    tools:context=".ResultatActivity">
    <TextView
        android:id="@+id/tvTitle"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="40sp"
        android:layout_marginTop="16dp"
        android:textStyle="bold"
        android:textColor="@color/white"
        android:text="@string/result"/>

    <androidx.cardview.widget.CardView
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:visibility="visible"
        android:id="@+id/resultatnota"
        app:cardBackgroundColor="@color/background_component"
        app:cardCornerRadius="16dp"
        android:layout_marginVertical="32dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toTopOf="@+id/btnRecalculate"
        app:layout_constraintTop_toBottomOf="@+id/tvTitle">

        <androidx.appcompat.widget.LinearLayoutCompat
            android:layout_width="match_parent"
            android:gravity="center"
            android:layout_height="match_parent"
            android:layout_margin="16dp"
            android:orientation="vertical">

            <TextView
                android:id="@+id/tvResult"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="26sp"
                android:textColor="@color/title_text"
                android:textStyle="bold"
                tools:text="Normal"/>

            <TextView
                android:id="@+id/tvIMC"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="70sp"
                android:layout_marginVertical="64dp"
                android:textColor="@color/white"
                android:textStyle="bold"
                tools:text="Normal"/>

            <TextView
                android:id="@+id/tvDescription"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:textSize="26sp"
                android:textColor="@color/white"
                tools:text="Normal"/>
        </androidx.appcompat.widget.LinearLayoutCompat>
    </androidx.cardview.widget.CardView>
    <androidx.cardview.widget.CardView
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:visibility="gone"
        android:id="@+id/grafic"
        app:cardBackgroundColor="@color/background_component"
        app:cardCornerRadius="16dp"
        android:layout_marginVertical="32dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toTopOf="@+id/btnRecalculate"
        app:layout_constraintTop_toBottomOf="@+id/tvTitle">

        <androidx.appcompat.widget.LinearLayoutCompat
            android:layout_width="match_parent"
            android:gravity="center"
            android:layout_height="match_parent"
            android:layout_margin="16dp"
            android:orientation="vertical">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="26sp"
                android:textColor="@color/title_text"
                android:textStyle="bold"
                android:text="@string/notatext"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="64sp"
                android:id="@+id/textpercen"
                android:layout_marginTop="32dp"
                android:layout_marginBottom="52dp"
                android:textColor="@color/white"
                android:textStyle="bold"
                tools:text="LALALA"/>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"

                    android:layout_gravity="bottom"
                    android:orientation="horizontal">
                    <TextView
                        android:id="@+id/tview1"
                        android:layout_width="0dp"
                        android:layout_height="200dp"
                        android:text="@string/vn2021"
                        android:textSize="16dp"
                        android:textStyle="bold"
                        android:gravity="center_horizontal|bottom"
                        android:layout_marginHorizontal="3dp"
                        android:background="@color/teal_200"
                        android:layout_weight="1"/>
                    <TextView
                        android:id="@+id/tview2"
                        android:layout_width="0dp"
                        android:layout_height="200dp"
                        android:text="@string/vn2022"
                        android:textSize="16dp"
                        android:textStyle="bold"
                        android:gravity="center_horizontal|bottom"
                        android:layout_marginHorizontal="3dp"
                        android:background="@color/purple_200"
                        android:layout_weight="1"/>
                    <TextView
                        android:id="@+id/tview3"
                        android:layout_width="0dp"
                        android:layout_height="200dp"
                        android:text="@string/vn2023"
                        android:textSize="16dp"
                        android:textStyle="bold"
                        android:gravity="center_horizontal|bottom"
                        android:layout_marginHorizontal="3dp"
                        android:background="@color/purple_500"
                        android:layout_weight="1"/>
                    <TextView
                        android:id="@+id/tview4"
                        android:layout_width="0dp"
                        android:layout_height="200dp"
                        tools:text="LALA"
                        android:textSize="16dp"
                        android:textStyle="bold"
                        android:gravity="center_horizontal|bottom"
                        android:layout_marginHorizontal="3dp"
                        android:background="@color/teal_700"
                        android:layout_weight="1"/>
                </LinearLayout>
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="top|center_horizontal"
                    android:gravity="center_horizontal"
                    android:orientation="horizontal">
                    <TextView
                        android:id="@+id/tv1"
                        android:layout_marginHorizontal="3dp"
                        android:layout_width="0dp"
                        android:textSize="14sp"
                        android:text="@string/v2021"
                        android:gravity="center"
                        android:textColor="@color/white"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"/>
                    <TextView
                        android:id="@+id/tv2"
                        android:layout_marginHorizontal="3dp"
                        android:layout_width="0dp"
                        android:text="@string/v2022"
                        android:textSize="14sp"
                        android:gravity="center"
                        android:textColor="@color/white"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"/>
                    <TextView
                        android:id="@+id/tv3"
                        android:layout_marginHorizontal="3dp"
                        android:layout_width="0dp"
                        android:text="@string/v2023"
                        android:textSize="14sp"
                        android:gravity="center"
                        android:textColor="@color/white"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"/>
                    <TextView
                        android:id="@+id/tv4"
                        android:layout_marginHorizontal="3dp"
                        android:layout_width="0dp"
                        android:text="@string/tu"
                        android:gravity="center"
                        android:textSize="16sp"
                        android:textColor="@color/white"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"/>
                </LinearLayout>
            </LinearLayout>
        </androidx.appcompat.widget.LinearLayoutCompat>
    </androidx.cardview.widget.CardView>

    <Button
        android:id="@+id/btnRecalculate"
        android:layout_width="0dp"
        android:layout_height="80dp"
        android:text="@string/recalculate"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>